--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.12",
+    "copy-to-clipboard": "^3.2.0",
     "emotion-theming": "^10.0.10",
     "formik": "^1.5.7",
     "normalize.css": "^8.0.1",
